--- a/backend/package.json
+++ b/backend/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node-dev --respawn src/app.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "ts-node-dev --respawn src/server.ts",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +16,11 @@
   },
   "devDependencies": {
     "@types/express": "4.17.21",
+    "@types/jest": "29.5.12",
+    "@types/supertest": "6.0.2",
+    "jest": "29.7.0",
+    "supertest": "7.0.0",
+    "ts-jest": "29.2.5",
     "ts-node-dev": "2.0.0",
     "typescript": "5.5.4"
   }
