--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -6,6 +6,6 @@
     "esModuleInterop": true,
     "outDir": "./dist"
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "__tests__"],
   "exclude": ["node_modules"]
 }
