--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "scripts": {
     "start": "ts-node-dev --respawn src/server.ts",
-    "test": "jest"
+    "test": "jest",
+    "clean": "rm -rf ./dist"
   },
   "keywords": [],
   "author": "",
