--- a/backend/package.json
+++ b/backend/package.json
@@ -12,10 +12,12 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "cors": "2.8.5",
     "express": "4.19.2",
     "zod": "3.23.8"
   },
   "devDependencies": {
+    "@types/cors": "2.8.17",
     "@types/express": "4.17.21",
     "@types/jest": "29.5.12",
     "@types/supertest": "6.0.2",
